--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "autoprefixer": "^10.4.24",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "embla-carousel-react": "^8.6.0",
+    "framer-motion": "^12.34.0",
     "lucide-react": "^0.469.0",
     "next": "^14.2.28",
     "react": "^18.3.1",
